# todomvc-rust-actixweb

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
config/: .env.template
docker/: Dockerfile
migrations/2020-01-28-010350_todos/: up.sql
src/: api.rs  db.rs  main.rs  models.rs  schema.rs
