[package]
name = "todomvc-rust-actixweb"
version = "0.1.0"
authors = ["Arseniy Krasnov <arseniy@krasnoff.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
dotenv = "0.15.0"
r2d2 = "0.8.8"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
failure = "0.1.5"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0"
env_logger = "0.7"
futures = "0.3.1"